--- a/wiki/BuildingFromSVN.wiki
+++ b/wiki/BuildingFromSVN.wiki
@@ -18,11 +18,11 @@ Everything is Java source that can be built with the included SmartGWT [http://a
 
  * Install [Apache Ant 1.6.5  http://ant.apache.org/bindownload.cgi] or later. We'll assume that the ant command is in your path.
 
- * Check out the GWT-Ext prerequisite tools and third-party libraries:
+ * Check out the SmartGWT prerequisite tools and third-party libraries:
      {{{ ~/smartgwt$ svn checkout http://smartgtwt.googlecode.com/svn/tools/ tools }}} 
 
  * Check out the SmartGWT source:
-     {{{ ~/gwt-ext$ svn checkout http://gwt-ext.googlecode.com/svn/trunk/ trunk }}}
+     {{{ ~/smartgwt$ svn checkout http://smartgwt.googlecode.com/svn/trunk/ trunk }}}
 
  * Switch to the directory into which you checked out the SmartGWT source. Let's assume you checked it out into ~/smartgwt/trunk. Make sure you're in that directory..
      {{{ ~/smartgwt$ cd ~/smartgwt/trunk }}}
