--- a/wiki/BuildingFromSVN.wiki
+++ b/wiki/BuildingFromSVN.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 == Compiling from Source ===
 
 === Checking Out the Source from Subversion ===
@@ -28,6 +29,9 @@ Everything is Java source that can be built with the included SmartGWT [http://a
      {{{ ~/smartgwt$ cd ~/smartgwt/trunk }}}
   then just invoke Ant
      {{{ ant  }}}
+
+To clean invoke 
+     {{{ ant  clean}}}
 
   * The SmartGWT build creates a binary distribution in the build/dist  subdirectory of the source root directory. In this example, the distributions would be in ~/smartgwt/trunk/build.
 
