--- a/wiki/BuildingFromSVN.wiki
+++ b/wiki/BuildingFromSVN.wiki
@@ -20,7 +20,7 @@ Everything is Java source that can be built with the included SmartGWT [http://a
  * Install [Apache Ant 1.6.5  http://ant.apache.org/bindownload.cgi] or later. We'll assume that the ant command is in your path.
 
  * Check out the SmartGWT prerequisite tools and third-party libraries:
-     {{{ ~/smartgwt$ svn checkout http://smartgtwt.googlecode.com/svn/tools/ tools }}} 
+     {{{ ~/smartgwt$ svn checkout http://smartgwt.googlecode.com/svn/tools/ tools }}} 
 
  * Check out the SmartGWT source:
      {{{ ~/smartgwt$ svn checkout http://smartgwt.googlecode.com/svn/trunk/ trunk }}}
