--- a/wiki/Release_Notes.wiki
+++ b/wiki/Release_Notes.wiki
@@ -1,12 +1,10 @@
-
-
-= Release Notes=
+#labels Featured
+== Release Notes ==
 
 Add your content here.
 
 
-= 1.0 b2 =
-
+=== 1.0 b2 ===
   * GWT 1.6 M1 and M2 support. GWT 1.5.3 continues to be fully supported
   * New lightweight *Enterprise Gray* skin
   * Performance improvements
@@ -22,7 +20,6 @@ Add your content here.
   * Separated additional skins into a smartgwt-skins.jar
   * Chrome, Firefox 3.1, and OSX hosted mode support
 
-= 1.0 b1 =
-
+=== 1.0 b1 ===
   * Initial Release
   * *GWT 1.5.3* (or greater) required
