--- a/wiki/Tutorials_Resoures.wiki
+++ b/wiki/Tutorials_Resoures.wiki
@@ -7,7 +7,6 @@ Various SmartGWT tutorials and resources from the web.
 
 [http://jellebeuselinck.wordpress.com/2009/03/05/setting-up-smartgwt/ http://jellebeuselinck.wordpress.com/2009/03/05/setting-up-smartgwt/] Setting up SmartGWT with Eclipse
 
-[http://smartgwt.rorschach.de/index.php5/Setting_up_Eclipse_%26_Maven2] SartGWT with Eclipse and GWT-Maven
+[http://smartgwt.rorschach.de/index.php5/Setting_up_Eclipse_%26_Maven2] SmartGWT with Eclipse and GWT-Maven
 
 [http://forums.smartclient.com/showthread.php?t=3168] Setting up SmartGWT with NetBeans and GWT4NB.
-
