--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
@@ -124,7 +124,7 @@ dateItem_pickerIconPrompt=Show Date Chooser
 
 valuesManager_unknownErrorMessage=Invalid value
 
-selection_selectionRangeNotLoadedMessage=Can't select that many records at once.<br><br>Please try working in smaller batches.
+selection_selectionRangeNotLoadedMessage=Can&#39;t select that many records at once.<br><br>Please try working in smaller batches.
 
 listGrid_emptyMessage=No items to show.
 listGrid_loadingDataMessage=Loading data...
@@ -137,9 +137,9 @@ listGrid_freezeOnLeftText=Freeze on left
 listGrid_sortFieldAscendingText=Sort Ascending
 listGrid_sortFieldDescendingText=Sort Descending
 listGrid_fieldVisibilitySubmenuTitle=Columns
-listGrid_freezeFieldText=Freeze ${viewer.getSummaryTitle(field)}
-listGrid_unfreezeFieldText=Unfreeze ${viewer.getSummaryTitle(field)}
-listGrid_groupByText=Group by ${title}
+listGrid_freezeFieldText=Freeze
+listGrid_unfreezeFieldText=Unfreeze
+listGrid_groupByText=Group by
 listGrid_ungroupText=Ungroup
 listGrid_addFormulaFieldText=Add formula column...
 listGrid_editFormulaFieldText=Edit formula...
@@ -148,8 +148,8 @@ listGrid_editSummaryFieldText=Edit summary format...
 listGrid_requiredFieldMessage=Field is required
 
 treeGrid_parentAlreadyContainsChildMessage=This item already contains a child item with that name.
-treeGrid_cantDragIntoSelfMessage=You can't drag an item into itself.
-treeGrid_cantDragIntoChildMessage=You can't drag an item into one of it's children.
+treeGrid_cantDragIntoSelfMessage=You can&#39;t drag an item into itself.
+treeGrid_cantDragIntoChildMessage=You can&#39;t drag an item into one of it&#39;s children.
 
 menuButton_title=Show Menu
 
