--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
@@ -24,6 +24,8 @@ operators_equalsTitle=equals
 operators_notEqualTitle=not equal
 operators_greaterThanTitle=greater than
 operators_lessThanTitle=less than
+operators_greaterOrEqualTitle=greater than or equal to
+operators_lessOrEqualTitle=less than or equal to
 operators_betweenTitle=between
 operators_betweenInclusiveTitle=between (inclusive)
 operators_iContainsTitle=contains
@@ -67,7 +69,7 @@ grouping_byUpcomingTitle=by Upcoming
 grouping_byHoursTitle=by Hours
 grouping_byMinutesTitle=by Minutes
 grouping_bySecondsTitle=by Seconds
-grouping_nyMillisecondsTitle=by Milliseconds
+grouping_byMillisecondsTitle=by Milliseconds
 
 validator_notABoolean=Must be a true/false value.
 validator_notAString=Must be a String.
@@ -141,11 +143,12 @@ listGrid_freezeFieldText=Freeze
 listGrid_unfreezeFieldText=Unfreeze
 listGrid_groupByText=Group by
 listGrid_ungroupText=Ungroup
-listGrid_addFormulaFieldText=Add formula column...
-listGrid_editFormulaFieldText=Edit formula...
-listGrid_addSummaryFieldText=Add sumamry column...
-listGrid_editSummaryFieldText=Edit summary format...
-listGrid_requiredFieldMessage=Field is required
+
+dataBoundComponent_addFormulaFieldText=Add formula column...
+dataBoundComponent_editFormulaFieldText=Edit formula...
+dataBoundComponent_addSummaryFieldText=Add sumamry column...
+dataBoundComponent_editSummaryFieldText=Edit summary format...
+dataBoundComponent_requiredFieldMessage=Field is required
 
 treeGrid_parentAlreadyContainsChildMessage=This item already contains a child item with that name.
 treeGrid_cantDragIntoSelfMessage=You can&#39;t drag an item into itself.
@@ -160,3 +163,8 @@ summaryBuilder_autoHideCheckBoxLabel=Auto hide fields used in summary
 summaryBuilder_helpTextIntro=The following functions are available:
 
 calendar_invalidDateMessage=From must be before To
+
+filterBuilder_topOperator=and
+filterBuilder_radioOptions_and=and
+filterBuilder_radioOptions_or=or
+filterBuilder_radioOptions_not=not
