various updates : de resourcebundle updates, various new API's, SelectItem.setDefaultValues(..)

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_de.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_de.properties
@@ -3,7 +3,7 @@ dialog_ApplyButtonTitle=Annehmen
 dialog_YesButtonTitle=Ja
 dialog_NoButtonTitle=Nein
 dialog_CancelButtonTitle=Abbrechen
-dialog_ConfirmTitle=Best‰tigen
+dialog_ConfirmTitle=Best√§tigen
 dialog_SayTitle=Meldung
 dialog_WarnTitle=Warnung
 dialog_AskTitle=Frage
@@ -15,32 +15,32 @@ dialog_LoginButtonTitle=Anmelden
 dialog_LoginErrorMessage=Benutzername oder Passwort falsch
 
 rpcManager_defaultPrompt=Kontaktiere Server...
-rpcManager_timeoutErrorMessage=Zeit¸berschreitung der Anfrage
-rpcManager_removeDataPrompt=Lˆsche Datensatz/-s‰tze...
+rpcManager_timeoutErrorMessage=Zeit√ºberschreitung der Anfrage
+rpcManager_removeDataPrompt=L√∂sche Datensatz/-s√§tze...
 rpcManager_saveDataPrompt=Speichere Formulardaten...
-rpcManager_fetchDataPrompt=Suche Datens‰tze die den Kriterien entsprechen...
+rpcManager_fetchDataPrompt=Suche Datens√§tze die den Kriterien entsprechen...
 
 operators_equalsTitle=gleich
 operators_notEqualTitle=ungleich
-operators_greaterThanTitle=grˆﬂer als
+operators_greaterThanTitle=gr√∂√üer als
 operators_lessThanTitle=kleiner als
 operators_betweenTitle=zwischen
 operators_betweenInclusiveTitle=zwischen (inklusive)
-operators_iContainsTitle=enth‰lt
+operators_iContainsTitle=enth√§lt
 operators_iStartsWithTitle=beginnt mit
 operators_iEndsWithTitle=endet mit
-operators_containsTitle=enth‰lt (Groﬂ-/Kleinschreibung)
-operators_startsWithTitle=beginnt mit (Groﬂ-/Kleinschreibung)
-operators_endsWithTitle=endet mit (Groﬂ-/Kleinschreibung)
-operators_iNotContainsTitle=enth‰lt nicht
+operators_containsTitle=enth√§lt (Gro√ü-/Kleinschreibung)
+operators_startsWithTitle=beginnt mit (Gro√ü-/Kleinschreibung)
+operators_endsWithTitle=endet mit (Gro√ü-/Kleinschreibung)
+operators_iNotContainsTitle=enth√§lt nicht
 operators_iNotStartsWithTitle=beginnt nicht mit
 operators_iNotEndsWithTitle=endet nicht mit
-operators_notContainsTitle=enth‰lt nicht (Groﬂ-/Kleinschreibung)
-operators_notStartsWithTitle=beginnt nicht mit (Groﬂ-/Kleinschreibung)
-operators_notEndsWithTitle=endet nicht mit (Groﬂ-/Kleinschreibung)
+operators_notContainsTitle=enth√§lt nicht (Gro√ü-/Kleinschreibung)
+operators_notStartsWithTitle=beginnt nicht mit (Gro√ü-/Kleinschreibung)
+operators_notEndsWithTitle=endet nicht mit (Gro√ü-/Kleinschreibung)
 operators_isNullTitle=ist NULL
 operators_notNullTitle=ist nicht NULL
-operators_regexpTitle=passt zu Ausdruck (Groﬂ-/Kleinschreibung)
+operators_regexpTitle=passt zu Ausdruck (Gro√ü-/Kleinschreibung)
 operators_iregexpTitle=passt zu Ausdruck
 operators_inSetTitle=ist Element von
 operators_notInSetTitle=ist kein Element von
@@ -53,8 +53,8 @@ operators_orTitle=Eine oder mehr Bedingungen
 grouping_upcomingTodayTitle=Heute
 grouping_upcomingTomorrowTitle=Morgen
 grouping_upcomingThisWeekTitle=Diese Woche
-grouping_upcomingNextWeekTitle=N‰chste Woche
-grouping_upcomingNextMonthTitle=N‰chster Monat
+grouping_upcomingNextWeekTitle=N√§chste Woche
+grouping_upcomingNextMonthTitle=N√§chster Monat
 grouping_upcomingBeforeTitle=Bevor
 grouping_upcomingLaterTitle=Danach
 grouping_byDayTitle=nach Tag
@@ -75,14 +75,14 @@ validator_notAnInteger=Muss eine ganze Zahl sein.
 validator_notADecimal=Muss eine Dezimalzahl sein.
 validator_notADate=Muss ein Datum sein.
 validator_mustBeLessThan=Muss weniger sein als
-validator_mustBeGreaterThan=Muss grˆsser sein als
+validator_mustBeGreaterThan=Muss gr√∂√üer sein als
 validator_mustBeLaterThan=Muss nach liegen
 validator_mustBeEarlierThan=Muss vor liegen
-validator_mustBeShorterThan=Muss k¸rzer sein als
-validator_mustBeLongerThan=Muss l‰nger sein als Zeichen
+validator_mustBeShorterThan=Muss k√ºrzer sein als
+validator_mustBeLongerThan=Muss l√§nger sein als Zeichen
 validator_mustBeExactLength=Muss genau Zeichen lang sein
 validator_requiredField=Feld ist obligatorisch
-validator_notOneOf=Keine g¸ltige Auswahl
+validator_notOneOf=Keine g√ºltige Auswahl
 
 date_shortDayNames_1=So
 date_shortDayNames_2=Mo
@@ -94,7 +94,7 @@ date_shortDayNames_7=Sa
 
 date_shortMonthNames_1=Jan
 date_shortMonthNames_2=Feb
-date_shortMonthNames_3=M‰r
+date_shortMonthNames_3=M√§r
 date_shortMonthNames_4=Apr
 date_shortMonthNames_5=Mai
 date_shortMonthNames_6=Jun
@@ -114,23 +114,23 @@ dateChooser_todayButtonTitle=Heute
 dateChooser_cancelButtonTitle=Abbrechen
 
 dynamicForm_errorsPreamble=Folgende Fehler sind aufgetreten
-dynamicForm_unknownErrorMessage=Ung¸ltiger Wert
+dynamicForm_unknownErrorMessage=Ung√ºltiger Wert
 
 selectOtherItem_otherTitle=Anderer Wert...
-selectOtherItem_selectOtherPrompt=Anderer Wert f¸r <br>?
+selectOtherItem_selectOtherPrompt=Anderer Wert f√ºr <br>?
 
-dateItem_invalidDateStringMessage=Ung¸ltiges Datum
+dateItem_invalidDateStringMessage=Ung√ºltiges Datum
 dateItem_pickerIconPrompt=Datumsauswahl anzeigen
 
-valuesManager_unknownErrorMessage=Ung¸ltiger Wert
+valuesManager_unknownErrorMessage=Ung√ºltiger Wert
 
-selection_selectionRangeNotLoadedMessage=Zu viele Datens‰tze selektiert.<br><br>Bitte schr‰nken Sie Ihre Auswahl weiter ein.
+selection_selectionRangeNotLoadedMessage=Zu viele Datens√§tze selektiert.<br><br>Bitte schr√§nken Sie Ihre Auswahl weiter ein.
 
 listGrid_emptyMessage=Keine Elemente zum Anzeigen vorhanden.
 listGrid_loadingDataMessage=Lade Daten...
 #listGrid_loadingMessage=
-listGrid_cancelEditingConfirmationMessage=Das Abbrechen des Bearbeitens verwirft alle ungespeicherten ƒnderungen. Mˆchten Sie fortfahren ?
-listGrid_confirmDiscardEditsMessage=Die Aktion verwirft alle ungespeicherten ƒnderungen.
+listGrid_cancelEditingConfirmationMessage=Das Abbrechen des Bearbeitens verwirft alle ungespeicherten √Ñnderungen. M√∂chten Sie fortfahren ?
+listGrid_confirmDiscardEditsMessage=Die Aktion verwirft alle ungespeicherten √Ñnderungen.
 listGrid_discardEditsSaveButtonTitle=Speichern
 listGrid_freezeOnRightText=Rechts fixieren
 listGrid_freezeOnLeftText=Links fixieren
@@ -141,23 +141,24 @@ listGrid_freezeFieldText=Fixieren
 listGrid_unfreezeFieldText=Fixierung aufheben
 listGrid_groupByText=Gruppieren nach
 listGrid_ungroupText=Gruppierung aufheben
-dataBoundComponent_addFormulaFieldText=Formelspalte hinzuf¸gen...
+
+dataBoundComponent_addFormulaFieldText=Formelspalte hinzuf√ºgen...
 dataBoundComponent_editFormulaFieldText=Formel bearbeiten...
-dataBoundComponent_addSummaryFieldText=Zusammenfassungsspalte hinzuf¸gen...
+dataBoundComponent_addSummaryFieldText=Zusammenfassungsspalte hinzuf√ºgen...
 dataBoundComponent_editSummaryFieldText=Zusammenfassungsformat bearbeiten...
 dataBoundComponent_requiredFieldMessage=Feld ist obligatorisch
 
 treeGrid_parentAlreadyContainsChildMessage=Es ist bereits ein Kindelement mit gleichem Namen enthalten.
-treeGrid_cantDragIntoSelfMessage=Sie kˆnnen ein Element nicht in sich selbst ziehen.
-treeGrid_cantDragIntoChildMessage=Sie kˆnnen ein Element nicht in eines seiner Kindelemente ziehen.
+treeGrid_cantDragIntoSelfMessage=Sie k√∂nnen ein Element nicht in sich selbst ziehen.
+treeGrid_cantDragIntoChildMessage=Sie k√∂nnen ein Element nicht in eines seiner Kindelemente ziehen.
 
-menuButton_title=Men¸ zeigen
+menuButton_title=Men√º zeigen
 
 formulaBuilder_autoHideCheckBoxLabel=In Formel verwendete Felder automatisch ausblenden
-formulaBuilder_helpTextIntro=Die folgenden Funktionen stehen zur Verf¸gung:
+formulaBuilder_helpTextIntro=Die folgenden Funktionen stehen zur Verf√ºgung:
 
 summaryBuilder_autoHideCheckBoxLabel=In Zusammenfassung verwendete Felder automatisch ausblenden
-summaryBuilder_helpTextIntro=Die folgenden Funktionen stehen zur Verf¸gung:
+summaryBuilder_helpTextIntro=Die folgenden Funktionen stehen zur Verf√ºgung:
 
 calendar_invalidDateMessage=Startdatum muss vor Enddatum liegen
 
