--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
@@ -63,14 +63,14 @@ grouping_byMonthTitle=par Mois
 grouping_byQuarterTitle=par Trimestre
 grouping_byYearTitle=par Ann&#233;e
 grouping_byDayOfMonthTitle=par Jour du Mois
-grouping_byUpcomingTitle=by Upcoming
+grouping_byUpcomingTitle=par ordre d&#39;arriv&#233;e
 grouping_byHoursTitle=par Heures
 grouping_byMinutesTitle=par Minutes
 grouping_bySecondsTitle=par Secondes
 grouping_byMillisecondsTitle=par Millisecondes
 
 validator_notABoolean=Doit &#234;tre une valeur vrai/faux.
-validator_notAString=Doit &#234;tre une chaÓne de caract&#232;res.
+validator_notAString=Doit &#234;tre une cha&#238;ne de caract&#232;res.
 validator_notAnInteger=Doit &#234;tre une nombre entier.
 validator_notADecimal=Doit &#234;tre un nombre d&#233;cimal.
 validator_notADate=Doit &#234;tre une date.
@@ -114,15 +114,15 @@ dateChooser_todayButtonTitle=Aujourd&#39;hui
 dateChooser_cancelButtonTitle=Annuler
 
 dynamicForm_errorsPreamble=Les erreurs suivantes ont &#233;t&#233; rencontr&#233;es
-dynamicForm_unknownErrorMessage=Valeur non valide
+dynamicForm_unknownErrorMessage=Valeur invalide
 
 selectOtherItem_otherTitle=Autres...
 selectOtherItem_selectOtherPrompt=Autre valeur pour <br> ?
 
-dateItem_invalidDateStringMessage=date non valide
+dateItem_invalidDateStringMessage=date invalide
 dateItem_pickerIconPrompt=Afficher le S&#233;lecteur de Date
 
-valuesManager_unknownErrorMessage=value non valide
+valuesManager_unknownErrorMessage=valeur invalide
 
 selection_selectionRangeNotLoadedMessage=Impossible de s&#233;lectionner autant d&#39;enregistrements d&#39;un coup.<br><br>Essayez de travailler avec moins d&#39;&#233;l&#233;ments.
 
@@ -141,6 +141,7 @@ listGrid_freezeFieldText=Geler
 listGrid_unfreezeFieldText=D&#233;geler
 listGrid_groupByText=Grouper par
 listGrid_ungroupText=D&#233;grouper
+
 dataBoundComponent_addFormulaFieldText=Ajouter une colonne Formule...
 dataBoundComponent_editFormulaFieldText=&#201;diter la formule...
 dataBoundComponent_addSummaryFieldText=Ajouter une colonne Somme...
@@ -148,7 +149,7 @@ dataBoundComponent_editSummaryFieldText=&#233;diter le format de la somme...
 dataBoundComponent_requiredFieldMessage=Champ requis
 
 treeGrid_parentAlreadyContainsChildMessage=Cet &#233;l&#233;ment contient d&#233;j&#224; un &#233;l&#233;ment enfant avec ce nom.
-treeGrid_cantDragIntoSelfMessage=Vous ne pouvez pas d&#233;placer cette &#233;l&#233;ment vers lui-m&#234;me.
+treeGrid_cantDragIntoSelfMessage=Vous ne pouvez pas d&#233;placer cet &#233;l&#233;ment vers lui-m&#234;me.
 treeGrid_cantDragIntoChildMessage=Vous ne pouvez pas d&#233;placer un &#233;l&#233;ment vers l&#39;un de ses &#233;l&#233;ments enfant.
 
 menuButton_title=Voir le Menu
@@ -159,4 +160,9 @@ formulaBuilder_helpTextIntro=Les fonctions suivantes sont disponibles :
 summaryBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilis&#233;s dans la somme
 summaryBuilder_helpTextIntro=Les fonctions suivantes sont disponibles :
 
-calendar_invalidDateMessage=Depuis doit &#234;tre avant
+calendar_invalidDateMessage=Date de d&#233;but doit &#234;tre avant date de fin
+
+filterBuilder_topOperator=et
+filterBuilder_radioOptions_and=et
+filterBuilder_radioOptions_or=ou
+filterBuilder_radioOptions_not=non
