--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
@@ -146,7 +146,7 @@ listGrid_ungroupText=Ungroup
 
 dataBoundComponent_addFormulaFieldText=Add formula column...
 dataBoundComponent_editFormulaFieldText=Edit formula...
-dataBoundComponent_addSummaryFieldText=Add sumamry column...
+dataBoundComponent_addSummaryFieldText=Add summary column...
 dataBoundComponent_editSummaryFieldText=Edit summary format...
 dataBoundComponent_requiredFieldMessage=Field is required
 
