--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -5,6 +5,8 @@ Various SmartGWT tutorials and resources from the web.
 
 = Tutorials =
 
+[http://vanje.wordpress.com/2009/04/25/gwt-and-smartgwt-quickstart-part-1/ http://vanje.wordpress.com/2009/04/25/gwt-and-smartgwt-quickstart-part-1/] GWT and SmartGWT QuickStart with Eclipse
+
 [http://jellebeuselinck.wordpress.com/2009/03/05/setting-up-smartgwt/ http://jellebeuselinck.wordpress.com/2009/03/05/setting-up-smartgwt/] Setting up SmartGWT with Eclipse
 
 [http://smartgwt.rorschach.de/index.php5/Setting_up_Eclipse_%26_Maven2] SmartGWT with Eclipse and GWT-Maven
