removed trailing semi-colon

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
@@ -1,4 +1,4 @@
-dialog_OkButtonTitle=OK;
+dialog_OkButtonTitle=OK
 dialog_ApplyButtonTitle=Appliquer
 dialog_YesButtonTitle=Oui
 dialog_NoButtonTitle=Non
