javadoc polishing : correctly linking to event handlers in javadoc

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
@@ -168,3 +168,13 @@ filterBuilder_topOperator=and
 filterBuilder_radioOptions_and=and
 filterBuilder_radioOptions_or=or
 filterBuilder_radioOptions_not=not
+#filterBuilder_addToolTip=Add
+#filterBuilder_removeTooltip=Remove
+#filterBuilder_addSubclauseTooltip=Add Subclause
+
+
+#printWindow_title=Print Preview
+#printWindow_printButtonTitle=Print
+
+
+
