--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt_BR.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt_BR.properties
@@ -1,4 +1,4 @@
-﻿dialog_OkButtonTitle=OK
+dialog_OkButtonTitle=OK
 dialog_ApplyButtonTitle=Aplicar
 dialog_YesButtonTitle=Sim
 dialog_NoButtonTitle=Não
@@ -14,8 +14,8 @@ dialog_PasswordTitle=Senha
 dialog_LoginButtonTitle=Autenticar
 dialog_LoginErrorMessage=Usuário ou senha inválido
 
-rpcManager_defaultPrompt=Contactando servidor...
-rpcManager_timeoutErrorMessage=Operação expirou
+rpcManager_defaultPrompt=Contatando o servidor...
+rpcManager_timeoutErrorMessage=A operação expirou
 rpcManager_removeDataPrompt=Apagando registros...
 rpcManager_saveDataPrompt=Salvando formulário...
 rpcManager_fetchDataPrompt=Pesquisando registros...
@@ -24,8 +24,8 @@ operators_equalsTitle=igual
 operators_notEqualTitle=diferente
 operators_greaterThanTitle=maior que
 operators_lessThanTitle=menor que
-operators_greaterOrEqualTitle=greater than or equal to
-operators_lessOrEqualTitle=less than or equal to
+operators_greaterOrEqualTitle=maior ou igual que
+operators_lessOrEqualTitle=menor ou igual que
 operators_betweenTitle=entre
 operators_betweenInclusiveTitle=entre (inclusivo)
 operators_iContainsTitle=contém
@@ -73,7 +73,7 @@ grouping_byMillisecondsTitle=por Millisegundos
 
 validator_notABoolean=Deve ser um valor verdadeiro/falso.
 validator_notAString=Deve ser um texto.
-validator_notAnInteger=Deve ser um número.
+validator_notAnInteger=Deve ser um número inteiro.
 validator_notADecimal=Deve ser um número decimal.
 validator_notADate=Deve ser uma data.
 validator_mustBeLessThan=Deve ser maior que
@@ -83,7 +83,7 @@ validator_mustBeEarlierThan=Deve ser antes de
 validator_mustBeShorterThan=Deve ser menos que caracteres
 validator_mustBeLongerThan=Deve ser mais que caracteres
 validator_mustBeExactLength=Deve ser exatamente caracteres
-validator_requiredField=Campo obrigatórios
+validator_requiredField=Campo obrigatório
 validator_notOneOf=Não é uma opção válida
 
 date_shortDayNames_1=Dom
@@ -160,9 +160,9 @@ formulaBuilder_autoHideCheckBoxLabel=Ocultar automaticamente os campos utilizado
 formulaBuilder_helpTextIntro=As seguintes funções estão disponíveis:
 
 summaryBuilder_autoHideCheckBoxLabel=Ocultar automaticamente os campos de resumo
-summaryBuilder_helpTextIntro=As seguintes funções são disponíveis:
+summaryBuilder_helpTextIntro=As seguintes funções estão disponíveis:
 
-calendar_invalidDateMessage=Data Início tem que estar antes de Data Fim
+calendar_invalidDateMessage=Início deve ser anterior a Fim
 
 filterBuilder_topOperator=e
 filterBuilder_radioOptions_and=e
