--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pl.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pl.properties
@@ -49,6 +49,8 @@ operators_notEqualFieldTitle=różne od pól
 operators_andTitle=Zaznacz wszystko
 operators_notTitle=Nie zaznaczaj nic
 operators_orTitle=Zaznacz cokolwiek
+operators_greaterOrEqualTitle=większe lub równe
+operators_lessOrEqualTitle=mniejsze lub równe
 
 grouping_upcomingTodayTitle=Dziś
 grouping_upcomingTomorrowTitle=Jutro
@@ -160,3 +162,8 @@ summaryBuilder_autoHideCheckBoxLabel=Auto ukrywanie pól użytych w podsumowaniu
 summaryBuilder_helpTextIntro=Dostępne są poniższe funkcje:
 
 calendar_invalidDateMessage=Od musi być przed Po
+
+filterBuilder_topOperator=i
+filterBuilder_radioOptions_and=i
+filterBuilder_radioOptions_or=lub
+filterBuilder_radioOptions_not=nie
