--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
@@ -157,24 +157,39 @@ treeGrid_cantDragIntoChildMessage=You can&#39;t drag an item into one of it&#39;
 menuButton_title=Show Menu
 
 formulaBuilder_autoHideCheckBoxLabel=Auto hide fields used in formula
-formulaBuilder_helpTextIntro=The following functions are available:
+formulaBuilder_helpTextIntro=For basic arithmetic, type in symbols (+-/%) directly.<p>The following functions are available:
+formulaBuilder_instructionsTextStart=The following fields are available for use in this
+formulaBuilder_samplePromptForRecord=For record:
+formulaBuilder_samplePromptOutput=Output:
 
 summaryBuilder_autoHideCheckBoxLabel=Auto hide fields used in summary
 summaryBuilder_helpTextIntro=The following functions are available:
 
 calendar_invalidDateMessage=From must be before To
+calendar_dayViewTitle=Day
+calendar_weekViewTitle=Week
+calendar_monthViewTitle=Month
+calendar_timelineViewTitle=Timeline
+calendar_eventNameFieldTitle=Event Name
+calendar_saveButtonTitle=Save Event
+calendar_detailsButtonTitle=Edit Details
+calendar_cancelButtonTitle=Cancel
+calendar_previousButtonHoverText=Previous
+calendar_nextButtonHoverText=Next
+calendar_addEventButtonHoverText=Add an event
+calendar_datePickerHoverText=Choose a date
 
 filterBuilder_topOperator=and
 filterBuilder_radioOptions_and=and
 filterBuilder_radioOptions_or=or
 filterBuilder_radioOptions_not=not
-#filterBuilder_addToolTip=Add
-#filterBuilder_removeTooltip=Remove
-#filterBuilder_addSubclauseTooltip=Add Subclause
+filterBuilder_rangeSeparator=and
+filterBuilder_subClauseButtonPrompt=Add Subclause
+filterBuilder_addButtonPrompt=Add
+filterBuilder_removeButtonPrompt=Remove
 
 
-#printWindow_title=Print Preview
-#printWindow_printButtonTitle=Print
+printWindow_title=Print Preview
+printWindow_printButtonTitle=Print
 
-
-
+pickTreeItem_emptyMenuMessage=No items to display
