updated italian resource bundle

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_it.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_it.properties
@@ -157,7 +157,10 @@ treeGrid_cantDragIntoChildMessage = Non puoi trascinare una voce in uno dei suoi
 menuButton_title = Mostra Menu
 
 formulaBuilder_autoHideCheckBoxLabel = Nascondi autometicamente i campi usati nella formula
-formulaBuilder_helpTextIntro = Sono disponibili le seguenti funzioni\:
+formulaBuilder_helpTextIntro=Per le operazioni elementari, digitare direttamente i simboli (+-/%).<p>Sono disponibili le seguenti funzioni\:
+formulaBuilder_instructionsTextStart=I seguenti campi sono utilizzabili
+formulaBuilder_samplePromptForRecord=Per record:
+formulaBuilder_samplePromptOutput=Destinazione:
 
 summaryBuilder_autoHideCheckBoxLabel = Nascondi autometicamente i campi usati nel sommario
 summaryBuilder_helpTextIntro = Sono disponibili le seguenti funzioni\:
@@ -168,3 +171,25 @@ filterBuilder_topOperator = e
 filterBuilder_radioOptions_and = e
 filterBuilder_radioOptions_or = o
 filterBuilder_radioOptions_not = non
+
+calendar_dayViewTitle=Giorno
+calendar_weekViewTitle=Settimana
+calendar_monthViewTitle=Mese
+calendar_timelineViewTitle=Cronologia
+calendar_eventNameFieldTitle=Evento
+calendar_saveButtonTitle=Stesso Evento
+calendar_detailsButtonTitle=Modifica dettagli
+calendar_cancelButtonTitle=Annulla
+calendar_previousButtonHoverText=Precedente
+calendar_nextButtonHoverText=Successivo
+calendar_addEventButtonHoverText=Aggiungi evento
+calendar_datePickerHoverText=Scegli una data
+filterBuilder_rangeSeparator=a
+filterBuilder_subClauseButtonPrompt=aggiungi sotto clausola
+filterBuilder_addButtonPrompt=Aggiungi
+filterBuilder_removeButtonPrompt=Rimuovi
+
+printWindow_title=Anteprima di stampa
+printWindow_printButtonTitle=Stampa
+
+pickTreeItem_emptyMenuMessage=Nessun elemento da visualizzare
