--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
@@ -24,6 +24,8 @@ operators_equalsTitle=&#233;gal
 operators_notEqualTitle=diff&#233;rent
 operators_greaterThanTitle=plus grand que
 operators_lessThanTitle=plus petit que
+operators_greaterOrEqualTitle=supérieur ou égal à
+operators_lessOrEqualTitle=inférieur ou égal à
 operators_betweenTitle=compris entre
 operators_betweenInclusiveTitle=compris entre (inclusif)
 operators_iContainsTitle=contient
@@ -155,7 +157,10 @@ treeGrid_cantDragIntoChildMessage=Vous ne pouvez pas d&#233;placer un &#233;l&#2
 menuButton_title=Voir le Menu
 
 formulaBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilis&#233;s dans la formule
-formulaBuilder_helpTextIntro=Les fonctions suivantes sont disponibles :
+formulaBuilder_helpTextIntro=Pour les opérations simples, utiliser directement les opérateurs (+-/%)<p>Les fonctions suivantes sont disponibles :
+formulaBuilder_instructionsTextStart=Les champs suivants peuvent être utilisés pour ce
+formulaBuilder_samplePromptForRecord=Pour l'enregistrment :
+formulaBuilder_samplePromptOutput=Résultat:
 
 summaryBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilis&#233;s dans la somme
 summaryBuilder_helpTextIntro=Les fonctions suivantes sont disponibles :
@@ -166,3 +171,26 @@ filterBuilder_topOperator=et
 filterBuilder_radioOptions_and=et
 filterBuilder_radioOptions_or=ou
 filterBuilder_radioOptions_not=non
+
+calendar_dayViewTitle=Jour
+calendar_weekViewTitle=Semaine
+calendar_monthViewTitle=Mois
+calendar_timelineViewTitle=Calendrier
+calendar_eventNameFieldTitle=Nom de l'evenement
+calendar_saveButtonTitle=Sauve l'evenement
+calendar_detailsButtonTitle=Modifier les détails
+calendar_cancelButtonTitle=Annuler
+calendar_previousButtonHoverText=Précédent
+calendar_nextButtonHoverText=Suivant
+calendar_addEventButtonHoverText=Ajouter un evenement
+calendar_datePickerHoverText=Choisir une date
+
+filterBuilder_rangeSeparator=et
+filterBuilder_subClauseButtonPrompt=Ajouter un filtre
+filterBuilder_addButtonPrompt=Ajouter
+filterBuilder_removeButtonPrompt=Supprimer
+
+printWindow_title=Apercu avant impression
+printWindow_printButtonTitle=Imprimer
+
+pickTreeItem_emptyMenuMessage=Aucune entrée à afficher
