--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_nb_NO.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_nb_NO.properties
@@ -25,7 +25,7 @@ operators_notEqualTitle=ulik
 operators_greaterThanTitle=større enn
 operators_lessThanTitle=mindre enn
 operators_greaterOrEqualTitle=større enn eller lik
-operators_lessOrEqualTitle=mindre enn eller lit
+operators_lessOrEqualTitle=mindre enn eller lik
 operators_betweenTitle=mellom
 operators_betweenInclusiveTitle=mellom (inklusiv)
 operators_iContainsTitle=inneholder
@@ -72,7 +72,7 @@ grouping_bySecondsTitle=pr Sekund
 grouping_byMillisecondsTitle=pr Millisekund
 
 validator_notABoolean=Må være en sann/falsk-verdi.
-validator_notAString=Må være en treng.
+validator_notAString=Må være en streng.
 validator_notAnInteger=Må være et heltall.
 validator_notADecimal=Må være et desimaltall,
 validator_notADate=Må være en dato
@@ -126,7 +126,7 @@ dateItem_pickerIconPrompt=Vis datovelger
 
 valuesManager_unknownErrorMessage=Ugyldig verdi
 
-selection_selectionRangeNotLoadedMessage=Kan ikke velge så mange rader på en gang.<br><br>Prøv med færre raderr om gangen.
+selection_selectionRangeNotLoadedMessage=Kan ikke velge så mange rader på en gang.<br><br>Prøv med færre rader om gangen.
 
 listGrid_emptyMessage=Ingen rader å vise.
 listGrid_loadingDataMessage=henter data...
@@ -141,7 +141,7 @@ listGrid_sortFieldDescendingText=Sorter Synkende
 listGrid_fieldVisibilitySubmenuTitle=Kolonner
 listGrid_freezeFieldText=Frys
 listGrid_unfreezeFieldText=Avfrys
-listGrid_groupByText=Gupper på
+listGrid_groupByText=Grupper på
 listGrid_ungroupText=Fjern gruppering
 
 dataBoundComponent_addFormulaFieldText=Legg til formel-kolonne...
@@ -157,14 +157,39 @@ treeGrid_cantDragIntoChildMessage=Du kan ikke dra et element inn i en av sine ba
 menuButton_title=Vis Meny
 
 formulaBuilder_autoHideCheckBoxLabel=Autoskjul felter brukt i formel
-formulaBuilder_helpTextIntro=Følgende funksjoner er tilgjengelig:
+formulaBuilder_helpTextIntro=For enkel aritmetikk, skriv inn symbolene (+-/%) direkte.<p>Følgende funksjoner er tilgjengelige:
+formulaBuilder_instructionsTextStart=Følgende felter er tilgjengelige for bruk i denne
+formulaBuilder_samplePromptForRecord=For rad:
+formulaBuilder_samplePromptOutput=Resultat:
 
 summaryBuilder_autoHideCheckBoxLabel=Autoskjul felter brukt i oppsummeringen
 summaryBuilder_helpTextIntro=Følgende funksjoner er tilgjengelig:
 
 calendar_invalidDateMessage=Fra-dato må være før til-dato
 
-filterBuilder_topOperator=and
-filterBuilder_radioOptions_and=and
-filterBuilder_radioOptions_or=or
-filterBuilder_radioOptions_not=not
+filterBuilder_topOperator=og
+filterBuilder_radioOptions_and=og
+filterBuilder_radioOptions_or=eller
+filterBuilder_radioOptions_not=ikke
+
+calendar_dayViewTitle=Dag
+calendar_weekViewTitle=Uke
+calendar_monthViewTitle=Måned
+calendar_timelineViewTitle=Tidslinje
+calendar_eventNameFieldTitle=Hendelsesnavn
+calendar_saveButtonTitle=Lagre hendelse
+calendar_detailsButtonTitle=Rediger Detaljer
+calendar_cancelButtonTitle=Avbryt
+calendar_previousButtonHoverText=Forrige
+calendar_nextButtonHoverText=Neste
+calendar_addEventButtonHoverText=Legg til en hendelse
+calendar_datePickerHoverText=Belg en dato
+filterBuilder_rangeSeparator=og
+filterBuilder_subClauseButtonPrompt=Legg til deluttrykk
+filterBuilder_addButtonPrompt=Legg til
+filterBuilder_removeButtonPrompt=Fjern
+
+printWindow_title=Forhåndsvis
+printWindow_printButtonTitle=Skriv ut
+
+pickTreeItem_emptyMenuMessage=Ingen elementer å vise
