updated german resource bundle

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_de.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_de.properties
@@ -24,6 +24,8 @@ operators_equalsTitle=gleich
 operators_notEqualTitle=ungleich
 operators_greaterThanTitle=größer als
 operators_lessThanTitle=kleiner als
+operators_greaterOrEqualTitle=größer als oder gleich
+operators_lessOrEqualTitle=kleiner als oder gleich
 operators_betweenTitle=zwischen
 operators_betweenInclusiveTitle=zwischen (inklusive)
 operators_iContainsTitle=enthält
@@ -155,10 +157,38 @@ treeGrid_cantDragIntoChildMessage=Sie können ein Element nicht in eines seiner 
 menuButton_title=Menü zeigen
 
 formulaBuilder_autoHideCheckBoxLabel=In Formel verwendete Felder automatisch ausblenden
-formulaBuilder_helpTextIntro=Die folgenden Funktionen stehen zur Verfügung:
-
+formulaBuilder_helpTextIntro=Neben den grundlegenden arithmetischen Operatoren (+-/%) können folgende Funktionen verwendet werden:
+formulaBuilder_instructionsTextStart=In dieser Formel verfügbare Felder
+formulaBuilder_samplePromptForRecord=Angewendet auf Datensatz:
+formulaBuilder_samplePromptOutput=Ausgabe:
 summaryBuilder_autoHideCheckBoxLabel=In Zusammenfassung verwendete Felder automatisch ausblenden
 summaryBuilder_helpTextIntro=Die folgenden Funktionen stehen zur Verfügung:
 
 calendar_invalidDateMessage=Startdatum muss vor Enddatum liegen
 
+calendar_dayViewTitle=Tag
+calendar_weekViewTitle=Woche
+calendar_monthViewTitle=Monat
+calendar_timelineViewTitle=Zeitleiste
+calendar_eventNameFieldTitle=Terminname
+calendar_saveButtonTitle=Termin speichern
+calendar_detailsButtonTitle=Details bearbeiten
+calendar_cancelButtonTitle=Abbrechen
+calendar_previousButtonHoverText=Vorheriger
+calendar_nextButtonHoverText=Nächster
+calendar_addEventButtonHoverText=Termin hinzufügen
+calendar_datePickerHoverText=Datum auswählen
+
+filterBuilder_topOperator=und
+filterBuilder_radioOptions_and=und
+filterBuilder_radioOptions_or=oder
+filterBuilder_radioOptions_not=nicht
+filterBuilder_rangeSeparator=und
+filterBuilder_subClauseButtonPrompt=Unterbedingung hinzufügen
+filterBuilder_addButtonPrompt=Hinzufügen
+filterBuilder_removeButtonPrompt=Entfernen
+
+printWindow_title=Druckvorschau
+printWindow_printButtonTitle=Drucken
+
+pickTreeItem_emptyMenuMessage=Keine Datensätze gefunden
